objects/Five9__Five9ListContactMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration for List Management</description>
    <fields>
        <fullName>Five9__delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This means field is going to be deleted</description>
        <label>delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__five9_field_name__c</fullName>
        <label>five9_field_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__salesforce_field_name__c</fullName>
        <label>salesforce_field_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Five9ListContactMapping</label>
</CustomObject>